# ImageViewer

./: CMakeLists.txt  iv.sh  readme.md
.claude/: settings.local.json
src/: file_manager.c  file_manager.h  main.c  sdl_manager.c  sdl_manager.h
